--- a/CSS/app.css
+++ b/CSS/app.css
@@ -25,6 +25,7 @@ body {
     overflow-x: hidden;
     position: relative;
     background-color: var(--main-bg-color);
+    /* overflow-x: hidden; */
 }
 
 button {
@@ -43,4 +44,170 @@ li {
 
 img {
     max-width: 100%;
+}
+
+.container{
+    max-width: 1366px;
+    margin: auto;
+    padding: 0 20px;
+    position: relative;
+}
+
+.bg-second{
+    background-color: var(--second-bg-color);
+}
+
+.bg-main{
+    background-color: var(--main-bg-color);
+}
+
+.text-red{
+    color: var(--red);
+}
+
+.mobile-menu{
+    align-items: center;
+    justify-content: space-between;
+    padding: 10px 20px;
+    display: none;
+}
+
+.mb-menu-close{
+    display: none;
+}
+
+.top-header{
+    height: 30px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.top-header ul{
+    display: flex;
+}
+
+.top-header a{
+    font-size: 13px;
+}
+
+ul.devided > li{
+    margin-right: 10px;
+    padding-right: 10px;
+    border-right: 1px solid;
+}
+
+ul.devided > li:last-child{
+    border-right: none;
+}
+
+/* dropdown */
+.dropdown{
+    position: relative;
+}
+
+.dropdown:hover .dropdown-content{
+    display: flex;
+    top: 100%;
+    opacity: 1;
+    visibility: visible;
+}
+
+.dropdown-content{
+    display: flex;
+    opacity: 0;
+    visibility: hidden;
+    position: absolute;
+    top: cal(100% + 10px);
+    background-color: #fff;
+    flex-direction: column;
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0;
+    transition: all.4s cubic-bezier(0.77, 0, 0.175, 1);
+    z-index: 2;
+}
+
+.dropdown-content > li > a{
+    padding: 10px;
+}
+
+.dropdown-content > li:hover{
+    color: var(--red);
+}
+/* end dropdown */
+
+.mid-header{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    height: 80px;
+    background-color: var(--main-bg-color);
+}
+
+.logo{
+    font-size: 40px;
+    font-weight: 700;
+}
+
+.mb-logo{
+    font-size: 40px;
+    font-weight: 700;
+}
+
+.search{
+    width: 600px;
+    height: 40px;
+    position: relative;
+}
+
+.search input{
+    height: 100%;
+    width: 100%;
+    font-size: 16px;
+    outline: 0;
+    padding: 0 20px;
+    border-radius: 10px;
+    border: 0;
+    background-color: var(--second-bg-color);
+}
+
+.search i{
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    right: 20px;
+    cursor: pointer;
+    font-size: 25px;
+}
+.user-menu{
+    display:flex;
+}
+
+.user-menu > li > a{
+    font-size: 30px;
+    margin-left: 15px;
+}
+
+.bottom-header{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.main-menu{
+    display: flex; 
+    height: var(--bottom-header-size);
+}
+
+.main-menu > a{
+    display: flex;
+    align-items: center;
+    margin: 0 20px;
+    font-weight: 600;
+    height: 100%;
+}
+
+.mega-content{
+    opacity: 0;
+    visibility: hidden;
+    position: absolute;
 }
